--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,6 +14,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Node Progress
+      uses: actions/setup-node@v1
+      with:
+        node-version: '14.x'
+    - name: Update yearProgress.txt
+      run: node yearProgress.js > yearProgress.txt
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
