--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,41 +5,41 @@ on:
     branches:
       - main
   schedule:
-    - cron:  '0 0 * * *'
+    - cron: "0 0 * * *"
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Node Progress
-      uses: actions/setup-node@v1
-      with:
-        node-version: '14.x'
-    - name: Update yearProgress.txt
-      run: node yearProgress.js > yearProgress.txt
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Update README
-      run: |-
-        python build_readme.py
-        cat README.md
-      env:
+      - uses: actions/checkout@v3
+      - name: Node Progress
+        uses: actions/setup-node@v3
+        with:
+          node-version: "lts/*"
+      - name: Update yearProgress.txt
+        run: node yearProgress.js > yearProgress.txt
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+          cache: "pip" # caching pip dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Update README
+        run: |-
+          python build_readme.py
+          cat README.md
+        env:
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-    - name: Commit and push if changed
-      run: |-
-        git diff
-        git config --global user.email "readme-bot@example.com"
-        git config --global user.name "README-bot"
-        git add -A
-        git commit -m "Updated content" || exit 0
-        git push
+      - name: Commit and push if changed
+        run: |-
+          git diff
+          git config --global user.email "hi@kuldeep.tech"
+          git config --global user.name "README-bot"
+          git add -A
+          git commit -m "🤖 Updated content" || exit 0
+          git push
