--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,23 +39,24 @@ jobs:
           python3 -m pip install -r requirements.txt
 
       # Generate all statistics images
-      # - name: Generate images``
-      #   run: |
-      #     python3 --version
-      #     python3 generate_images.py
-      #   env:
-      #     ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     EXCLUDED: ${{ secrets.EXCLUDED }}
-      #     EXCLUDED_LANGS: ${{ secrets.EXCLUDED_LANGS }}
-      # EXCLUDE_FORKED_REPOS: true
-      # - name: Update README
-      #   run: |-
-      #     python build_readme.py
-      #     cat README.md
-      #   env:
-      #     CLIENT_ID: ${{ secrets.CLIENT_ID }}
-      #     CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+      - name: Generate images``
+        run: |
+          python3 --version
+          python3 generate_images.py
+        env:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          EXCLUDED: ${{ secrets.EXCLUDED }}
+          EXCLUDED_LANGS: ${{ secrets.EXCLUDED_LANGS }}
+          EXCLUDE_FORKED_REPOS: true
+      - name: Update README
+        run: |-
+          python build_readme.py
+          cat README.md
+        env:
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+      
       - name: AI Generated image
         run: |
           python3 ai_generate_images.py
